--- a/public/scss/_global.scss
+++ b/public/scss/_global.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@200;400;700&display=swap');
+
 $darkest: #323545;
 $dark: #3C457D;
 $medium: #536ADE;
 $light: #B1BBEC;
 $lightest: #E6E8F4;
+$attention: #34eb34;
