--- a/public/scss/_desktop-card.scss
+++ b/public/scss/_desktop-card.scss
@@ -38,6 +38,10 @@
         color: $darkest;
         border-color: orange;
     }
+    .title-url {
+        text-decoration: none;
+        color: $medium;
+    }
     @media only screen and (min-width: 1200px) {
     .coin-text {
         width: 52%;
