--- a/public/scss/_mobile-card.scss
+++ b/public/scss/_mobile-card.scss
@@ -25,7 +25,7 @@
     // border-left: 4px solid $lightest;
   }
   .nav-link {
-    border-right: 4px solid $lightest!important;
+    border-right: 4px solid $medium!important;
     margin-left: 10px;
     font-weight: bold;
     font-size: 14px;
@@ -50,6 +50,20 @@
   .tab-title {
     font-size: 18px;
   }
+  .title-url {
+    text-decoration: none;
+    color: $darkest;
+  }
+  .btn-primary {
+        background-color: $darkest;
+        color: orange;
+        font-weight: bold;
+    }
+    .btn-primary:hover {
+        background-color: orange;
+        color: $darkest;
+        border-color: orange;
+    }
 }
 
 
