fixes and content

--- a/public/scss/_desktop-card.scss
+++ b/public/scss/_desktop-card.scss
@@ -1,5 +1,8 @@
 
 .desktop {
+    .table {
+        min-height: 360px;
+    }
     tr {
         border-color: $medium;
         background-color: $lightest;
