prices route changes and desktop styling

--- a/public/scss/_desktop-card.scss
+++ b/public/scss/_desktop-card.scss
@@ -40,5 +40,6 @@
         padding: 8px;
         font-size: 16px;
         border-color: $darkest;
+        border-top-right-radius: 20px;
     }
 }
