--- a/public/scss/_prices.scss
+++ b/public/scss/_prices.scss
@@ -57,7 +57,7 @@
     padding-top: 20px;
   }
   .sidebar, .api-loaded {
-    border-radius: 30px;
+    border-top-right-radius: 20px;
   }
   .api-loading p {
     margin-top: 14em;
